--- a/day - 10 Oct-08-2025/css/style.css
+++ b/day - 10 Oct-08-2025/css/style.css
@@ -1,20 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Lacquer&family=Oswald:wght@200..700&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Oswald", sans-serif;
+/* 01712062236 */
+
+@font-face {
+  font-family: "Poppins-regular";
+  src: url(../fonts/Poppins-Regular.ttf);
 }
 
 @font-face {
-    font-family: jarina;
-    src: url("../fonts/Lato-Bold.ttf");
+  font-family: "Poppins-light";
+  src: url(../fonts/Poppins-Light.ttf);
+}
+
+@font-face {
+  font-family: "Poppins-bold";
+  src: url(../fonts/Poppins-Bold.ttf);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins-regular";
+    box-sizing: border-box;
+    font-style: normal;
+}
+
+
+a, button {
+  font-family: "Poppins-light";  
+}
+
+h1, h2, h3, h4 {
+  font-family: "Poppins-bold";
+}
+
+
+body, p {
+  font-weight: 400;
 }
 
 .container {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+.container {
     width: 100%;
     display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    padding: 30px;
 }
 
 .container > div {
@@ -22,9 +55,13 @@
     border-radius: 8px;
 }
 
-.container > div > img {
-    width: 100%;
-    border-radius: 8px 8px 0 0;
+.container > div > div {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px 30px;
 }
 
 .container > div > div {
@@ -36,8 +73,11 @@
 }
 
 .container > div > div > h3 {
-    font-family: "Lacquer", system-ui;
+    /* font-family: "Lacquer", system-ui; */
 }
+
+
+
 
 .container > div > div > button {
     border-width: 0;
@@ -46,68 +86,35 @@
     background: #000;
     color: #fff;
     cursor: pointer;
-    font-family: jarina;
+    /* font-family: jarina; */
 }
 
-@media screen and (max-width: 768px) {
-    .container {
-        padding: 16px;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 16px;
-    }
-
-    .container > div {
-        background: lightblue;
-    }
-
-    .container > div > div {
-        padding: 16px;
-        gap: 8px;
-    }
-
-    .container > div > div > h3 {
-        font-size: 20px;
-    }
+.container img {
+    max-width: 100%;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1020px) {
-    .container {
-        padding: 24px;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 24px;
-    }
-
-    .container > div {
-        background: lightgreen;
-    }
-
-    .container > div > div {
-        padding: 24px;
-        gap: 12px;
-    }
-
-    .container > div > div > h3 {
-        font-size: 24px;
-    }
+@media only screen and (max-width: 1100px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
 }
 
-@media screen and (min-width: 1020px) {
+}
+
+@media only screen and (max-width: 768px) and (orientation: portrait)  {
     .container {
-        padding: 32px;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 32px;
-    }
+    grid-template-columns: repeat(2, 1fr);
+}
+}
 
-    .container > div {
-        background: lightgoldenrodyellow;
-    }
+@media only screen and (max-width: 768px) 
+{
+    .container {
+    grid-template-columns: repeat(2, 1fr);
+}
+}
 
-    .container > div > div {
-        padding: 32px;
-        gap: 16px;
-    }
-
-    .container > div > div > h3 {
-        font-size: 28px;
-    }
+@media only screen and (max-width: 768px) and (orientation: landscape)  {
+    .container {
+    grid-template-columns: repeat(3, 1fr);
+}
 }
