--- a/day - 12 & 13 Oct-12 Oct-13 2025/css/style.scss
+++ b/day - 12 & 13 Oct-12 Oct-13 2025/css/style.scss
@@ -71,6 +71,10 @@
             }
             &:last-child{
                 padding-top: 95px;
+                padding-bottom: 0;
+                >img{
+                    margin-bottom: -4px;
+                }
             }
         }
     }
@@ -80,10 +84,10 @@
     >.container{
         display: grid;
         grid-template-columns: repeat(3, minmax(auto, 330px));
-        justify-content: center;
+        justify-content: space-between;
         >div{
             text-align: center;
-            padding: 60px 10px;
+            padding: 60px 2px;
             >figure {
                 width: 98px;
                 height: 98px;
@@ -94,6 +98,69 @@
                 place-items: center;
                 margin: auto;
                 font-size: 44px;
+            }
+            >h3 {
+                font-family: Raleway;
+                font-size: 22px;
+                line-height: 18px;
+                font-weight: 600;
+                color: #222;
+                margin: 30px 0;
+            }
+            >p{
+                color: #848484;
+                line-height: 26px;
+            }
+        }
+    }
+}
+
+.notified {
+    background: #e3e3e3;
+    >.container{
+        display: grid;
+        grid-template-columns: minmax(auto, 541px) max-content;
+        justify-content: space-between;
+        >div {
+            padding: 58px 0;
+            &:first-child {
+                >h2{
+                    font-family: Raleway;
+                    font-weight: 600;
+                    font-size: 22px;
+                    line-height: 18px;
+                    color: #222;
+                }
+                >p{
+                    line-height: 26px;
+                    color: #848484;
+                    margin: 26px 0;
+                }
+                >form{
+                    width: 446px;
+                    height: 56px;
+                    display: flex;
+                    >input[type="email"]{
+                        width: 305px;
+                        background: #fff;
+                        border: 1px solid #c8c8c8;
+                        padding: 0 26px;
+                        border-radius: 15px 0 0 15px;
+                        &::placeholder{
+                            font-size: 18px;
+                        }
+                    }
+                    >button{
+                        width: 141px;
+                        background: #2dcb71;
+                        color: #fff;
+                        font-family: Raleway;
+                        font-weight: bold;
+                        border: 1px solid #2dcb71;
+                        border-radius: 0 15px 15px 0;
+                        font-size: 22px;
+                    }
+                }
             }
         }
     }
